fix: H5 footer z-index and visibility

--- a/src/pages/product/product/style.scss
+++ b/src/pages/product/product/style.scss
@@ -235,7 +235,7 @@ page {
     bottom: var(--window-bottom);
     // #endif
     left: 0;
-    z-index: 9;
+    z-index: 999;
     background: #fff;
     padding-bottom: env(safe-area-inset-bottom);
     height: calc(100rpx + env(safe-area-inset-bottom));
